<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/secret_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_secret"
        android:lines="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/load_secret"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_secret"/>

        <Button
            android:id="@+id/save_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_secret"/>
    </LinearLayout>
</LinearLayout>