<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clear_password"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_password"/>
        <Button
            android:id="@+id/set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"/>
    </LinearLayout>

    <include layout="@layout/include_secret_info"/>
</LinearLayout>